2010-03-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Document rcsdiff(1) options passed to underyling diff(1).

	* rcsdiff.c (:help comment): Expand.

2010-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	rcsdiff: Accept `-U N' to output N lines of unified context.

	* rcsdiff.c (main): Handle option `-U'.

2010-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Cause "make check" to fail if any test fails.

	* Makefile.in (check): If any test fails, fail overall.

2010-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use '\0' more.

	* ci.c: Throughout, replace `0' a char context with '\0'.
	* co.c: Likewise.
	* merger.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsedit.c: Likewise.
	* rcskeep.c: Likewise.
	* rcslex.c: Likewise.
	* rcsrev.c: Likewise.
	* rcsutil.c: Likewise.

2010-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `printf %.2d' check to configure.ac.

	* rcstime.c (proper_dot_2): Rewrite func as simple macro.

2010-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use <stdbool.h>.

	* rcsbase.h (true, false): Delete #define:s.
	* ci.c: #include <stdbool.h>.
	* co.c: Likewise.
	* ident.c: Likewise.
	* merge.c: Likewise.
	* rcs.c: Likewise.
	* rcsbase.h: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsedit.c: Likewise.
	* rcsfcmp.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcskeep.c: Likewise.
	* rcslex.c: Likewise.
	* rcsmerge.c: Likewise.
	* rcsrev.c: Likewise.
	* rcssyn.c: Likewise.
	* rcsutil.c: Likewise.
	* rlog.c: Likewise.

2010-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Use `NULL' more.

	* ci.c: Throughout, replace `0' in a pointer context with `NULL'.
	* co.c: Likewise.
	* maketime.c: Likewise.
	* merge.c: Likewise.
	* merger.c: Likewise.
	* partime.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsedit.c: Likewise.
	* rcsfnms.c: Likewise.
	* rcsgen.c: Likewise.
	* rcskeep.c: Likewise.
	* rcskeys.c: Likewise.