@@ -1135,3 +1135,6 @@ now (void)
     efaterror ("time");
   return t;
 }
+
+char const equal_line[] =
+  "=============================================================================\n";
